[package]
name = "macmon"
version = "0.5.1"
edition = "2021"

[lib]
name = "macmon"
crate-type = ["cdylib"]

[lints.rust]
non_camel_case_types = "allow"
unused_assignments = "allow"
unreachable_code = "allow"

[profile.release]
panic = "abort"
strip = false

[dependencies]
core-foundation = "0.10.0"
libc = "0.2.168"
serde = { version = "1.0.216", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.133"